Fixing an overflow issue.

--- a/src/scss/layout/main/_calculator.scss
+++ b/src/scss/layout/main/_calculator.scss
@@ -1,8 +1,10 @@
 @import "../../css3/background-clip";
 
-.home .calculator { height: 190px; }
-.calculator {
+.home .calculator {
+  height: 190px;
   overflow: hidden;
+}
+.calculator {
   position: relative;
   height: auto;
   @include linear-gradient((top, $medgray 0px, $white 220px));
